--- a/Canada.html
+++ b/Canada.html
@@ -25,49 +25,53 @@
     </div>
     <div class="container">
         <h1>Canada</h1>
-        <div class="line"></div>
-        
+        <div><hr class="line"></div>
         <div class="content-section">
             <div class="text-content">
-                <h2>Why Canada?</h2>
-                <p>Canada has always captivated me with its breathtaking natural landscapes, diverse culture, and welcoming atmosphere. The perfect blend of modern cities and untouched wilderness makes it an ideal destination for both urban exploration and outdoor adventures. I dream of experiencing the northern lights, exploring vast national parks, and immersing myself in the friendly Canadian culture.</p>
-            </div>
-        </div>
-        <div class="places-grid">
-            <div class="place-card">
-                <img src="Dream Places to Visit/banff.jpg" alt="Banff National Park">
-                <h3>Banff National Park</h3>
-                <p>Experience the majestic Rocky Mountains and pristine Lake Louise</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/yukon.jpg" alt="Northern Lights">
-                <h3>Northern Lights in Yukon</h3>
-                <p>Witness the magical aurora borealis dance across the night sky</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/niagara.jpg" alt="Niagara Falls">
-                <h3>Niagara Falls</h3>
-                <p>Feel the power of one of the world's most famous waterfalls</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/vancouver.jpg" alt="Vancouver">
-                <h3>Vancouver</h3>
-                <p>Explore the perfect blend of urban life and natural beauty</p>
+                <h2><i class="fas fa-globe-asia"></i> True North Strong and Free</h2>
+                <p>Canada, a vast and diverse country that stretches from the Atlantic to the Pacific, offering breathtaking natural wonders and multicultural urban experiences. From the majestic Rocky Mountains to vibrant coastal cities, this welcoming nation combines stunning wilderness with modern sophistication, making it a perfect destination for both adventure seekers and culture enthusiasts.</p>
             </div>
         </div>
         <div class="content-section">
             <div class="text-content">
-                <h2>Experiences I Look Forward To</h2>
+                <h2><i class="fas fa-map-marker-alt"></i> Places I Want to Visit</h2>
+            </div>
+            <div class="places-grid">
+                <div class="place-card">
+                    <img src="Dream Places to Visit/banff.jpg" alt="Banff">
+                    <h3>Banff National Park</h3>
+                    <p>A paradise in the Canadian Rockies, featuring turquoise lakes, snow-capped peaks, and abundant wildlife. Explore Lake Louise's crystal-clear waters, hike through pristine mountain trails, soak in natural hot springs, and experience world-class skiing. The park offers year-round adventures amid some of the most spectacular mountain scenery on Earth.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/vancouver.jpg" alt="Vancouver">
+                    <h3>Vancouver</h3>
+                    <p>A stunning coastal metropolis where mountains meet the ocean. Explore Stanley Park's massive urban forest, experience the vibrant food scene in Granville Island, hike the Grouse Mountain, and enjoy the city's diverse cultural offerings. Vancouver consistently ranks as one of the world's most livable cities.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/niagara.jpg" alt="Niagara Falls">
+                    <h3>Niagara Falls</h3>
+                    <p>One of the world's most spectacular natural wonders. Experience the raw power of Horseshoe Falls up close on a Maid of the Mist boat tour, explore the surrounding wine country, and enjoy the vibrant entertainment district. The falls are particularly magical when illuminated at night.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/yukon.jpg" alt="Northern Lights">
+                    <h3>Northern Lights in Yukon</h3>
+                    <p>Witness the mesmerizing Aurora Borealis dance across the northern sky. The Yukon Territory offers some of the best views of this natural phenomenon, along with opportunities to experience dog sledding, ice fishing, and authentic indigenous culture in the pristine Arctic wilderness.</p>
+                </div>
+            </div>
+        </div>
+        <div class="content-section">
+            <div class="text-content">
+                <h2><i class="fas fa-heart"></i> Why I Want to Visit Canada</h2>
                 <ul>
-                    <li>Hiking through the Rocky Mountains</li>
-                    <li>Trying authentic Canadian maple syrup</li>
-                    <li>Ice skating on frozen lakes</li>
-                    <li>Whale watching in Vancouver</li>
-                    <li>Experiencing the vibrant culture of Toronto</li>
+                    <li>Experience the breathtaking Northern Lights and pristine wilderness in the Canadian Rockies.</li>
+                    <li>Explore diverse cities like Vancouver and Toronto, known for their multiculturalism and quality of life.</li>
+                    <li>Visit iconic natural landmarks like Niagara Falls and Banff National Park.</li>
+                    <li>Try authentic Canadian cuisine, from maple syrup to poutine and fresh seafood.</li>
+                    <li>Participate in winter sports and summer outdoor adventures in world-class locations.</li>
+                    <li>Experience the warmth of Canadian hospitality and their unique blend of cultures.</li>
                 </ul>
             </div>
         </div>
-    </div>
     <div class="navigation">
         <a href="dreamPLace.html" class="nav-button"><i class="fas fa-globe"></i> Back to Dream Places</a>
         <a href="#" class="nav-button"><i class="fas fa-arrow-up"></i></a>
