--- a/Italy.html
+++ b/Italy.html
@@ -23,55 +23,55 @@
             <a href="bucketList.html" class="Button"><i class="fas fa-list-alt"></i>&nbsp;&nbsp;Bucket List</a>
         </div>
     </div>
-
     <div class="container">
         <h1>Italy</h1>
-        <div class="line"></div>
-        
+        <div><hr class="line"></div>
         <div class="content-section">
             <div class="text-content">
-                <h2>Why Italy?</h2>
-                <p>Italy has always been my dream destination with its rich history, stunning architecture, world-renowned cuisine, and vibrant culture. From ancient Roman ruins to Renaissance masterpieces, from coastal Mediterranean villages to rolling Tuscan hills, Italy offers an incredible mix of art, history, and natural beauty. I'm drawn to its passionate way of life, traditional craftsmanship, and the promise of authentic Italian experiences.</p>
+                <h2><i class="fas fa-globe-asia"></i> La Dolce Vita</h2>
+                <p>Italy, a country where art, history, and cuisine create an unforgettable experience. From ancient ruins to Renaissance masterpieces, every corner tells a story. This enchanting Mediterranean nation is a treasure trove of world-renowned art, architecture, and cultural heritage. The birthplace of the Roman Empire and the Renaissance, Italy continues to captivate visitors with its passionate people, stunning landscapes, and mouthwatering culinary traditions. Whether you're exploring ancient ruins in Rome, cruising through Venice's canals, wandering through Tuscan vineyards, or relaxing on the Amalfi Coast, Italy offers a perfect blend of history, culture, and modern luxury that makes every visit truly memorable.</p>
             </div>
         </div>
-
-        <div class="places-grid">
-            <div class="place-card">
-                <img src="Dream Places to Visit/rome.jpg" alt="Rome Colosseum">
-                <h3>Rome - The Eternal City</h3>
-                <p>Explore ancient ruins, including the magnificent Colosseum and Roman Forum</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/venice.jpg" alt="Venice Canals">
-                <h3>Venice</h3>
-                <p>Experience the romantic canals and historic architecture of this unique floating city</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/tuscany.jpg" alt="Tuscany">
-                <h3>Tuscany</h3>
-                <p>Discover picturesque vineyards, medieval towns, and the artistic legacy of Florence</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/amalfi coast.jpg" alt="Amalfi Coast">
-                <h3>Amalfi Coast</h3>
-                <p>Marvel at dramatic coastlines, colorful villages, and crystal-clear Mediterranean waters</p>
-            </div>
-        </div>
-
         <div class="content-section">
             <div class="text-content">
-                <h2>Experiences I Look Forward To</h2>
+                <h2><i class="fas fa-map-marker-alt"></i> Must-Visit Places</h2>
+            </div>
+            <div class="places-grid">
+                <div class="place-card">
+                    <img src="Dream Places to Visit/rome.jpg" alt="Rome">
+                    <h3>Rome</h3>
+                    <p>The eternal city where ancient ruins meet vibrant modern life. Home to the iconic Colosseum, Vatican City, and Roman Forum. Experience the rich history, indulge in authentic Italian cuisine, and toss a coin in the Trevi Fountain.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/venice.jpg" alt="Venice">
+                    <h3>Venice</h3>
+                    <p>A magical city built on water, famous for its romantic gondola rides, stunning St. Mark's Basilica, and intricate canal network. Explore hidden alleys, visit the colorful Murano and Burano islands, and experience the unique Venetian Carnival.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/tuscany.jpg" alt="Tuscany">
+                    <h3>Tuscany</h3>
+                    <p>The heart of the Italian Renaissance, featuring rolling hills, vineyards, and historic cities like Florence and Siena. Visit world-famous galleries, sample Chianti wines, and explore medieval towns perched atop scenic hillsides.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/amalfi coast.jpg" alt="Amalfi Coast">
+                    <h3>Amalfi Coast</h3>
+                    <p>A stunning Mediterranean paradise with dramatic cliffs, colorful fishing villages, and crystal-clear waters. Visit charming towns like Positano and Ravello, enjoy fresh seafood, and take scenic boat tours along the spectacular coastline.</p>
+                </div>
+            </div>
+        </div>
+        <div class="content-section">
+            <div class="text-content">
+                <h2><i class="fas fa-heart"></i> Why I Want to Visit Italy</h2>
                 <ul>
-                    <li>Learning to make authentic Italian pasta from local chefs</li>
-                    <li>Visiting the Vatican Museums and Sistine Chapel</li>
-                    <li>Taking a gondola ride through Venice's canals</li>
-                    <li>Wine tasting in Tuscan vineyards</li>
-                    <li>Exploring the ancient ruins of Pompeii</li>
+                    <li>Experience authentic Italian cuisine and learn traditional cooking techniques, from pasta making to wine tasting in Tuscany's vineyards.</li>
+                    <li>Explore the magnificent ancient Roman ruins, especially the Colosseum and Forum, to witness history firsthand.</li>
+                    <li>View iconic Renaissance masterpieces in the Vatican Museums and Florence's galleries.</li>
+                    <li>Discover the beautiful Mediterranean coastline, from the Amalfi Coast's dramatic cliffs to Sicily's pristine beaches.</li>
+                    <li>Immerse myself in Italian culture through local festivals, historic village life, and the famous Italian hospitality.</li>
+                    <li>Experience the blend of historical architecture and modern Italian lifestyle in cities like Milan and Rome.</li>
                 </ul>
             </div>
         </div>
-    </div>
-
     <div class="navigation">
         <a href="dreamPLace.html" class="nav-button"><i class="fas fa-globe"></i> Back to Dream Places</a>
         <a href="#" class="nav-button"><i class="fas fa-arrow-up"></i></a>
