--- a/Japan.html
+++ b/Japan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canada - Dream Destinations</title>
+    <title>Japan - Dream Destinations</title>
     <link rel="stylesheet" href="countries.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -23,55 +23,55 @@
             <a href="bucketList.html" class="Button"><i class="fas fa-list-alt"></i>&nbsp;&nbsp;Bucket List</a>
         </div>
     </div>
-
     <div class="container">
         <h1>Japan</h1>
-        <div class="line"></div>
-        
+        <div><hr class="line"></div>
         <div class="content-section">
             <div class="text-content">
-                <h2>Why Japan?</h2>
-                <p>Japan has always been my dream destination for its unique blend of ancient traditions and cutting-edge modernity. From serene temples and historic castles to neon-lit cities and bullet trains, Japan offers an extraordinary cultural experience. I'm fascinated by its meticulous attention to detail, exceptional cuisine, innovative technology, and profound respect for tradition.</p>
+                <h2><i class="fas fa-globe-asia"></i> Land of the Rising Sun</h2>
+                <p>Japan, a fascinating blend of ancient traditions and cutting-edge technology. From serene temples to bustling modern cities, Japan offers an unforgettable cultural experience.</p>
             </div>
         </div>
-
-        <div class="places-grid">
-            <div class="place-card">
-                <img src="Dream Places to Visit/tokyo.jpg" alt="Tokyo">
-                <h3>Tokyo</h3>
-                <p>Experience the world's most exciting metropolis with its futuristic technology, anime culture, and hidden temples</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/kyoto.jpg" alt="Kyoto">
-                <h3>Kyoto</h3>
-                <p>Discover traditional Japan through ancient temples, beautiful gardens, and geisha districts</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/fuji.jpg" alt="Mount Fuji">
-                <h3>Mount Fuji</h3>
-                <p>Visit Japan's iconic mountain and experience the surrounding hot springs and scenic lakes</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/osaka.jpg" alt="Osaka">
-                <h3>Osaka</h3>
-                <p>Explore Japan's kitchen with its amazing street food, historic castle, and vibrant entertainment districts</p>
-            </div>
-        </div>
-
         <div class="content-section">
             <div class="text-content">
-                <h2>Experiences I Look Forward To</h2>
+                <h2><i class="fas fa-map-marker-alt"></i> Places I Want to Visit</h2>
+            </div>
+            <div class="places-grid">
+                <div class="place-card">
+                    <img src="Dream Places to Visit/tokyo.jpg" alt="Tokyo">
+                    <h3>Tokyo</h3>
+                    <p>A dazzling metropolis where tradition meets the future. From the historic Senso-ji Temple to the futuristic Shibuya Crossing, experience the world's most exciting city. Explore anime culture in Akihabara, peaceful gardens, and the city's renowned food scene from street food to Michelin-starred restaurants.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/kyoto.jpg" alt="Kyoto">
+                    <h3>Kyoto</h3>
+                    <p>The cultural heart of Japan, home to over 1,600 Buddhist temples and 400 Shinto shrines. Witness the ethereal beauty of the Golden Pavilion, experience traditional tea ceremonies, and spot geishas in the historic Gion district. The city comes alive during cherry blossom season.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/fuji.jpg" alt="Mount Fuji">
+                    <h3>Mount Fuji</h3>
+                    <p>Japan's iconic sacred mountain and UNESCO World Heritage site. Whether viewing its perfect cone from afar or challenging yourself to climb to its summit, Mount Fuji represents the spiritual and cultural heart of Japan. The surrounding Five Lakes region offers stunning views and hot springs.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/osaka.jpg" alt="Osaka">
+                    <h3>Osaka</h3>
+                    <p>Japan's kitchen and entertainment capital. Famous for its street food culture, vibrant nightlife in Dotonbori, and friendly locals. Visit the magnificent Osaka Castle, experience the city's comedy culture, and indulge in local specialties like takoyaki and okonomiyaki.</p>
+                </div>
+            </div>
+        </div>
+        <div class="content-section">
+            <div class="text-content">
+                <h2><i class="fas fa-heart"></i> Why I Want to Visit Japan</h2>
                 <ul>
-                    <li>Experiencing cherry blossom season in spring</li>
-                    <li>Staying in a traditional ryokan with onsen</li>
-                    <li>Visiting the Studio Ghibli Museum</li>
-                    <li>Taking a ride on the Shinkansen bullet train</li>
-                    <li>Participating in a traditional tea ceremony</li>
+                    <li>Experience the perfect blend of ancient traditions and cutting-edge technology.</li>
+                    <li>Explore iconic temples and shrines, especially during cherry blossom season.</li>
+                    <li>Try authentic Japanese cuisine, from sushi to ramen and street food.</li>
+                    <li>Visit modern districts in Tokyo and historic areas in Kyoto.</li>
+                    <li>Experience unique Japanese culture through tea ceremonies and local festivals.</li>
+                    <li>Take scenic trips to Mount Fuji and ride the bullet train through Japan.</li>
                 </ul>
             </div>
         </div>
-    </div>
-
     <div class="navigation">
         <a href="dreamPLace.html" class="nav-button"><i class="fas fa-globe"></i> Back to Dream Places</a>
         <a href="#" class="nav-button"><i class="fas fa-arrow-up"></i></a>
