--- a/SouthKorea.html
+++ b/SouthKorea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canada - Dream Destinations</title>
+    <title>South Korea - Dream Destinations</title>
     <link rel="stylesheet" href="countries.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -23,55 +23,55 @@
             <a href="bucketList.html" class="Button"><i class="fas fa-list-alt"></i>&nbsp;&nbsp;Bucket List</a>
         </div>
     </div>
-
     <div class="container">
         <h1>South Korea</h1>
-        <div class="line"></div>
-        
-        <div class="content-section">
-            <div class="text-content">
-                <h2>Why South Korea?</h2>
-                <p>South Korea fascinates me with its perfect blend of ancient traditions and ultra-modern technology. From its vibrant K-pop culture to historic temples, from bustling street markets to serene mountain temples, South Korea offers an incredible mix of experiences. I'm drawn to its innovative technology, delicious cuisine, beautiful landscapes, and rich cultural heritage.</p>
+        <div><hr class="line"></div>
+            <div class="content-section">
+                <div class="text-content">
+                    <h2><i class="fas fa-globe-asia"></i> Land of Morning Calm</h2>
+                    <p>South Korea, a dynamic nation where ancient traditions harmoniously blend with modern innovations. From historic palaces to K-pop culture, this vibrant country offers an exciting mix of old and new. Experience the unique Korean Wave (Hallyu) phenomenon, innovative technology, and rich cultural heritage that makes South Korea a fascinating destination.</p>
+                </div>
             </div>
-        </div>
-
-        <div class="places-grid">
-            <div class="place-card">
-                <img src="Dream Places to Visit/seoul.jpg" alt="Seoul">
-                <h3>Seoul</h3>
-                <p>Experience the dynamic capital city with its mix of modern skyscrapers, traditional markets, and historic palaces</p>
+            <div class="content-section">
+                <div class="text-content">
+                    <h2><i class="fas fa-map-marker-alt"></i> Places I Want to Visit</h2>
+                </div>
+                <div class="places-grid">
+                    <div class="place-card">
+                        <img src="Dream Places to Visit/seoul.jpg" alt="Seoul">
+                        <h3>Seoul</h3>
+                        <p>A mesmerizing metropolis where ancient palaces stand alongside futuristic skyscrapers. Explore the historic Gyeongbokgung Palace, experience K-pop culture in Gangnam, shop in Myeongdong, and enjoy the vibrant street food scene in Hongdae. The city never sleeps with its 24-hour culture and endless entertainment options.</p>
+                    </div>
+                    <div class="place-card">
+                        <img src="Dream Places to Visit/busan.jpg" alt="Busan">
+                        <h3>Busan</h3>
+                        <p>Korea's vibrant second city and largest port, known for its beautiful beaches and seafood. Visit the colorful Gamcheon Culture Village, relax at Haeundae Beach, explore the massive Jagalchi Fish Market, and find peace at the scenic Haedong Yonggungsa Temple built on coastal cliffs.</p>
+                    </div>
+                    <div class="place-card">
+                        <img src="Dream Places to Visit/jeju.jpg" alt="Jeju Island">
+                        <h3>Jeju Island</h3>
+                        <p>A volcanic paradise known as Korea's Hawaii. Climb the iconic Hallasan Mountain, explore lava tubes, visit the unique Haenyeo women divers' culture, and enjoy the island's beautiful beaches. Experience the unique landscape formed by volcanic activity and the distinct local culture.</p>
+                    </div>
+                    <div class="place-card">
+                        <img src="Dream Places to Visit/gyeongju.jpg" alt="Gyeongju">
+                        <h3>Gyeongju</h3>
+                        <p>The ancient capital of the Silla Kingdom, often called 'the museum without walls.' Discover UNESCO World Heritage sites like Bulguksa Temple, explore ancient tombs, and visit the stunning Anapji Pond. The city is a living testament to Korea's rich historical heritage.</p>
+                    </div>
+                </div>
             </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/jeju.jpg" alt="Jeju Island">
-                <h3>Jeju Island</h3>
-                <p>Explore the volcanic landscapes, beautiful beaches, and unique culture of Korea's largest island</p>
+            <div class="content-section">
+                <div class="text-content">
+                    <h2><i class="fas fa-heart"></i> Why I Want to Visit South Korea</h2>
+                    <ul>
+                        <li>Immerse myself in K-culture, from K-pop to K-dramas and modern entertainment.</li>
+                        <li>Experience the vibrant street food scene and traditional Korean cuisine.</li>
+                        <li>Visit historic palaces and temples while exploring modern Seoul.</li>
+                        <li>Enjoy the natural beauty of Jeju Island and its unique volcanic landscapes.</li>
+                        <li>Experience Korean beauty culture and innovative technology.</li>
+                        <li>Participate in traditional festivals and modern cultural events.</li>
+                    </ul>
+                </div>
             </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/busan.jpg" alt="Busan">
-                <h3>Busan</h3>
-                <p>Visit the colorful Gamcheon Culture Village, beautiful beaches, and vibrant seafood markets</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/gyeongju.jpg" alt="Gyeongju">
-                <h3>Gyeongju</h3>
-                <p>Discover the ancient capital filled with historic temples, royal tombs, and traditional architecture</p>
-            </div>
-        </div>
-
-        <div class="content-section">
-            <div class="text-content">
-                <h2>Experiences I Look Forward To</h2>
-                <ul>
-                    <li>Trying authentic Korean street food in Myeongdong</li>
-                    <li>Experiencing a traditional temple stay</li>
-                    <li>Visiting K-pop entertainment companies</li>
-                    <li>Wearing a traditional Hanbok at Gyeongbokgung Palace</li>
-                    <li>Relaxing in a Korean jimjilbang (traditional spa)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
     <div class="navigation">
         <a href="dreamPLace.html" class="nav-button"><i class="fas fa-globe"></i> Back to Dream Places</a>
         <a href="#" class="nav-button"><i class="fas fa-arrow-up"></i></a>
