--- a/Sweden.html
+++ b/Sweden.html
@@ -23,55 +23,55 @@
             <a href="bucketList.html" class="Button"><i class="fas fa-list-alt"></i>&nbsp;&nbsp;Bucket List</a>
         </div>
     </div>
-
     <div class="container">
         <h1>Sweden</h1>
-        <div class="line"></div>
-        
+        <div><hr class="line"></div>
         <div class="content-section">
             <div class="text-content">
-                <h2>Why Sweden?</h2>
-                <p>Sweden enchants me with its perfect balance of natural beauty, innovative design, and sustainable living. From its stunning archipelagos to pristine wilderness, from medieval old towns to modern eco-friendly cities, Sweden represents the ideal blend of environmental consciousness and high quality of life. I'm drawn to its progressive culture, fascinating Viking history, and the magical northern lights.</p>
+                <h2><i class="fas fa-globe-asia"></i> Nordic Paradise</h2>
+                <p>Sweden, a Scandinavian gem known for its stunning natural beauty, innovative design, and high quality of life. From the enchanting Northern Lights to the midnight sun, this Nordic nation offers breathtaking natural phenomena. With its perfect blend of pristine wilderness and modern urban living, Sweden showcases innovative sustainability, rich Viking heritage, and the famous Swedish way of life that prioritizes work-life balance through 'lagom' - the art of balanced living.</p>
             </div>
         </div>
-
-        <div class="places-grid">
-            <div class="place-card">
-                <img src="Dream Places to Visit/stockholm.jpg" alt="Stockholm">
-                <h3>Stockholm</h3>
-                <p>Explore the beautiful archipelago city with its colorful old town, royal palace, and innovative museums</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/icehotel.jpg" alt="Ice Hotel">
-                <h3>Ice Hotel in Jukkasjärvi</h3>
-                <p>Experience the unique adventure of staying in a hotel made entirely of ice and snow</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/gothenburg.jpg" alt="Gothenburg">
-                <h3>Gothenburg</h3>
-                <p>Discover Sweden's charming west coast city known for its canals, seafood, and amusement parks</p>
-            </div>
-            <div class="place-card">
-                <img src="Dream Places to Visit/lapland.jpg" alt="Swedish Lapland">
-                <h3>Swedish Lapland</h3>
-                <p>Witness the northern lights and experience Sami culture in the Arctic wilderness</p>
-            </div>
-        </div>
-
         <div class="content-section">
             <div class="text-content">
-                <h2>Experiences I Look Forward To</h2>
+                <h2><i class="fas fa-map-marker-alt"></i> Places I Want to Visit</h2>
+            </div>
+            <div class="places-grid">
+                <div class="place-card">
+                    <img src="Dream Places to Visit/stockholm.jpg" alt="Stockholm">
+                    <h3>Stockholm</h3>
+                    <p>The stunning capital built across an archipelago of 14 islands, where medieval history meets modern innovation. Explore the colorful old town Gamla Stan, visit the ABBA museum, and discover the world's longest art gallery in the metro system. The city perfectly blends royal palaces with contemporary design and green spaces.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/icehotel.jpg" alt="Ice Hotel">
+                    <h3>Ice Hotel</h3>
+                    <p>A magical destination in Jukkasjärvi where art meets winter wonder. This architectural marvel is rebuilt every winter using ice from the Torne River. Each room is a unique art installation, offering an unforgettable experience of sleeping in -5°C while wrapped in warm reindeer furs.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/gothenburg.jpg" alt="Gothenburg">
+                    <h3>Gothenburg</h3>
+                    <p>Sweden's charming second city, known for its friendly atmosphere and maritime heritage. Home to Scandinavia's largest amusement park Liseberg, world-class seafood restaurants, and beautiful archipelago. The city's tram-lined streets, botanical gardens, and vibrant food scene make it a perfect cultural destination.</p>
+                </div>
+                <div class="place-card">
+                    <img src="Dream Places to Visit/lapland.jpg" alt="Lapland">
+                    <h3>Lapland</h3>
+                    <p>The magical Arctic region where you can witness the spectacular Northern Lights dance across the sky. Experience Sami culture, go dog sledding through snow-covered forests, and stay in unique accommodations like glass igloos. In summer, enjoy the midnight sun and endless outdoor adventures.</p>
+                </div>
+            </div>
+        </div>
+        <div class="content-section">
+            <div class="text-content">
+                <h2><i class="fas fa-heart"></i> Why I Want to Visit Sweden</h2>
                 <ul>
-                    <li>Celebrating Midsummer festival with locals</li>
-                    <li>Taking a fika break in a traditional Swedish café</li>
-                    <li>Visiting the ABBA Museum in Stockholm</li>
-                    <li>Experiencing the midnight sun in summer</li>
-                    <li>Trying traditional Swedish meatballs and pastries</li>
+                    <li>Experience the magical Northern Lights and midnight sun phenomena.</li>
+                    <li>Explore Stockholm's beautiful archipelago and historic old town.</li>
+                    <li>Visit the famous Ice Hotel and experience unique Nordic architecture.</li>
+                    <li>Try traditional Swedish cuisine and famous fika coffee culture.</li>
+                    <li>Experience the sustainable and minimalist Scandinavian lifestyle.</li>
+                    <li>Explore the pristine nature and outdoor activities in all seasons.</li>
                 </ul>
             </div>
         </div>
-    </div>
-
     <div class="navigation">
         <a href="dreamPLace.html" class="nav-button"><i class="fas fa-globe"></i> Back to Dream Places</a>
         <a href="#" class="nav-button"><i class="fas fa-arrow-up"></i></a>
