--- a/bucketList.html
+++ b/bucketList.html
@@ -23,48 +23,85 @@
             <a href="bucketList.html" class="Button active"><i class="fas fa-list-alt"></i>&nbsp;&nbsp;Bucket List</a>
         </div>
     </div>
-        <h1>My Bucket List</h1>
-        <div>
-            <hr class="line">
-        </div>
+    <h1>My Bucket List</h1>
+    <div>
+        <hr class="line">
+    </div>
     <div class="bucketlist-container">
         <section class="bucket-section">
             <h2>Career Goals</h2>
             <div class="bucket-item">
                 <i class="fas fa-laptop-code"></i>
-                <h3>Software Engineer</h3>
-                <p>My dream is to become a skilled software engineer, creating innovative solutions and contributing to meaningful projects.</p>
+                <h3>Software Engineering</h3>
+                <p>To become a software engineer someday, creating innovative solutions.</p>
             </div>
             <div class="bucket-item">
                 <i class="fas fa-chart-line"></i>
-                <h3>Business Analyst</h3>
-                <p>Aspiring to bridge the gap between business needs and technical solutions through data-driven analysis.</p>
-            </div>
-        </section>
-        <section class="bucket-section">
-            <h2>Personal Development</h2>
-            <div class="bucket-item">
-                <i class="fas fa-graduation-cap"></i>
-                <h3>Educational Goals</h3>
-                <p>Complete advanced degrees in Computer Science and gain specialized certifications in my field.</p>
+                <h3>Business Analysis</h3>
+                <p>Aspiring to become a business analyst bridging tech and business needs.</p>
             </div>
             <div class="bucket-item">
                 <i class="fas fa-brain"></i>
-                <h3>Skills Enhancement</h3>
-                <p>Master multiple programming languages and stay updated with emerging technologies.</p>
+                <h3>Skill Development</h3>
+                <p>Enhance my programming skills and logical thinking abilities.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-graduation-cap"></i>
+                <h3>Education</h3>
+                <p>Finish my IT Degree Course with excellence.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-briefcase"></i>
+                <h3>Career Start</h3>
+                <p>Land a decent job in the tech industry.</p>
             </div>
         </section>
+
+        <section class="bucket-section">
+            <h2>Personal Goals</h2>
+            <div class="bucket-item">
+                <i class="fas fa-heart"></i>
+                <h3>Family Life</h3>
+                <p>Build a happy and loving family with my girlfriend someday.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-star"></i>
+                <h3>Personal Success</h3>
+                <p>Become successful in life and achieve my dreams.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-wallet"></i>
+                <h3>Financial Security</h3>
+                <p>Achieve financial stability and independence.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-home"></i>
+                <h3>Assets</h3>
+                <p>Own a house, car, and sportsbike.</p>
+            </div>
+        </section>
+
         <section class="bucket-section">
             <h2>Life Experiences</h2>
             <div class="bucket-item">
-                <i class="fas fa-globe-americas"></i>
-                <h3>Travel Goals</h3>
-                <p>Visit tech hubs around the world and experience different work cultures.</p>
+                <i class="fas fa-plane"></i>
+                <h3>World Travel</h3>
+                <p>Travel to my dream destinations around the globe.</p>
             </div>
             <div class="bucket-item">
-                <i class="fas fa-users"></i>
-                <h3>Community Impact</h3>
-                <p>Mentor aspiring developers and contribute to open-source projects.</p>
+                <i class="fas fa-globe"></i>
+                <h3>International Career</h3>
+                <p>Work abroad and experience different cultures.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-hands-helping"></i>
+                <h3>Give Back</h3>
+                <p>Help others achieve their dreams and make a positive impact.</p>
+            </div>
+            <div class="bucket-item">
+                <i class="fas fa-book"></i>
+                <h3>Continuous Learning</h3>
+                <p>Never stop learning and growing as a person.</p>
             </div>
         </section>
     </div>
